--- a/src/Makefile
+++ b/src/Makefile
@@ -3,7 +3,7 @@ CC = g++
 main:
 	${CC} -g -o main main.cpp Sorting.cpp CompSorting.cpp DataGenerator.cpp
 
-test: test/sorting_test.cpp
+sort_test: test/sorting_test.cpp
 	${CC} -g -o sorting_test Sorting.cpp DataGenerator.cpp test/sorting_test.cpp 
 
 clean:
